--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.22.1",
     "crypto-js": "^4.2.0",
@@ -22,7 +23,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
